bug fixes.